Tweaks, error page, sidebar.

--- a/templates/about.html
+++ b/templates/about.html
@@ -61,7 +61,7 @@
             <p>Nick hails from M.I.T. with two degrees in "Course 6" (Electrical Engineering and Computer science) and Course 7 (Biology). He's currently an MD/PhD student in the lab of Dr. Jeffrey Gordon.</p>
             <ul class="list-unstyled list-inline list-social-icons">
                 <li class="tooltip-social facebook-link"><a href="https://www.facebook.com/semenko" data-toggle="tooltip" data-placement="top" title="Facebook"><i class="fa fa-facebook-square fa-2x"></i></a></li>
-                <li class="tooltip-social linkedin-link"><a href=https://www.linkedin.com/in/semenko" data-toggle="tooltip" data-placement="top" title="LinkedIn"><i class="fa fa-linkedin-square fa-2x"></i></a></li>
+                <li class="tooltip-social linkedin-link"><a href="https://www.linkedin.com/in/semenko" data-toggle="tooltip" data-placement="top" title="LinkedIn"><i class="fa fa-linkedin-square fa-2x"></i></a></li>
                 <li class="tooltip-social twitter-link"><a href="https://twitter.com/semenko" data-toggle="tooltip" data-placement="top" title="Twitter"><i class="fa fa-twitter-square fa-2x"></i></a></li>
                 <li class="tooltip-social google-plus-link"><a href="https://github.com/semenko" data-toggle="tooltip" data-placement="top" title="GitHub"><i class="fa fa-github-square fa-2x"></i></a></li>
             </ul>
@@ -73,7 +73,7 @@
             <p>Aaron spent his undergrad years at Stanford where he studied Symbolic Systems. He is currently a medicine resident. Aaron is also working on a health care startup.</p>
             <ul class="list-unstyled list-inline list-social-icons">
                 <li class="tooltip-social facebook-link"><a href="https://www.facebook.com/aaronmintz" data-toggle="tooltip" data-placement="top" title="Facebook"><i class="fa fa-facebook-square fa-2x"></i></a></li>
-                <li class="tooltip-social linkedin-link"><a href=https://www.linkedin.com/in/aaronmintz" data-toggle="tooltip" data-placement="top" title="LinkedIn"><i class="fa fa-linkedin-square fa-2x"></i></a></li>
+                <li class="tooltip-social linkedin-link"><a href="https://www.linkedin.com/in/aaronmintz" data-toggle="tooltip" data-placement="top" title="LinkedIn"><i class="fa fa-linkedin-square fa-2x"></i></a></li>
             </ul>
         </div>
 
@@ -116,6 +116,7 @@
                 </ul>
                 <div class="tab-content">
                     <div class="tab-pane active" id="home">
+                        <i class="fa fa-gavel pull-left fa-2x"></i>
                         <p>At ClinDesk and White Coat Academy, we try to be as transparent as possible with our finances and governance
                             (in the hopes that you'll <a href="//www.whitecoatacademy.org/donate.html">donate</a> to help keep us going!).</p>
                         <p>You can see some of our documents listed in the above tabs. Over the next year, we'll expand these listings as we grow.</p>
