--- a/templates/_analytics_code.html
+++ b/templates/_analytics_code.html
@@ -11,6 +11,7 @@
     ga('create', 'UA-32988270-1', {'siteSpeedSampleRate': 100});
     {% endif %}
 
+    ga('require', 'linkid', 'linkid.js');
     ga('send', 'pageview');
     window.onerror = function(m, u, l) { ga('send', 'event', 'JSError', m, u + ':' + l, null, {'nonInteraction': 1}); };
 </script>
