--- a/templates/errors/404.html
+++ b/templates/errors/404.html
@@ -3,6 +3,10 @@
 {% block tagline_text %}Page Not Found{% endblock %}
 
 {% block maincontent %}
+<script>
+    {# Report error to Google Analytics #}
+    ga('send', 'event', 'Error404', location.pathname + location.search  + location.hash, document.referrer, null, {'nonInteraction': 1});
+</script>
 
             <div class="container">
 
