--- a/templates/about.html
+++ b/templates/about.html
@@ -1,4 +1,6 @@
 {% extends "_base.html" %}
+
+{% set about_active = 'active' %}
 {% block title %}About Us{% endblock %}
 {% block tagline_text %}About Us{% endblock %}
 {% block lead %}About ClinDesk &amp; White Coat Academy{% endblock %}
