--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,6 @@
 {% extends "_base.html" %}
+{% set home_active = 'active' %}
+
 {% block title %}Welcome to ClinDesk{% endblock %}
 {# {% block jumbotron_class %}masthead{% endblock %} #}
 {% block tagline_text %}Welcome to ClinDesk{% endblock %}
