--- a/templates/_base.html
+++ b/templates/_base.html
@@ -9,8 +9,7 @@
     <meta name="author" content="{% block meta_author %}Nick Semenkovich (@semenko), ClinDesk &amp; White Coat Academy{% endblock %}" />
     <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
 
-    {# Move this to local dependent code! #}
-    <link href="//fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
+
 
     {%- if config.apphost is defined -%}
     {# Building for production. Use the CDN minified versions. #}
@@ -18,7 +17,7 @@
     <link href="{{ static('css/cd-style.css') }}" rel="stylesheet">
     <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet">
 
-    <!-- Only serve analytics code in prod. -->
+    <!-- Only serve analytics code if not running locally. -->
     {% include '_analytics_code.html' %}
     {% else %}
     {# Running locally. Use local versions (e.g. work on airplanes!) #}
@@ -26,6 +25,9 @@
     <link href="{{ static('css/cd-style.css') }}" rel="stylesheet">
     <link href="{{ static('css/font-awesome-4.0.3.css') }}" rel="stylesheet">
     {% endif %}
+
+    {# Move this to local dependent code? #}
+    <link href="//fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
 
     <!--[if lt IE 8]><script src="//ie6-upgrade-warning.googlecode.com/svn/trunk/ie6/warning.js"></script><script>window.onload=function(){e("//ie6-upgrade-warning.googlecode.com/svn/trunk/ie6/")}</script><![endif]-->
     <!--[if lt IE 9]><script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.6.2/html5shiv.js"></script><![endif]-->
