--- a/templates/calc/_calc_base.html
+++ b/templates/calc/_calc_base.html
@@ -1,47 +1,42 @@
 {% extends "_base.html" %}
 
-{% block title %}{% block calc_title %}nested{% endblock %} — Medical Calculators{% endblock %}
+{% block title %}{% block calc_title %}calc_title{% endblock %} — Medical Calculators{% endblock %}
 
 {% block maincontent %}
-    <div class="container">
+<div class="container">
 
-      <div class="row">
+    <div class="row">
         <div class="col-md-3 col-sm-4 sidebar">
             <ul class="nav nav-stacked nav-pills">
-              <li><a href="index.html">Home</a></li>
-              <li><a href="about.html">About</a></li>
-              <li><a href="services.html">Services</a></li>
-              <li><a href="contact.html">Contact</a></li>
-              <li class="disabled"><a href="#">Portfolio</a></li>
-              <li><a href="portfolio-1-col.html">1 Column Portfolio</a></li>
-              <li><a href="portfolio-2-col.html">2 Column Portfolio</a></li>
-              <li><a href="portfolio-3-col.html">3 Column Portfolio</a></li>
-              <li><a href="portfolio-4-col.html">4 Column Portfolio</a></li>
-              <li><a href="portfolio-item.html">Single Portfolio Item</a></li>
-              <li class="disabled"><a href="#">Blog</a></li>
-              <li><a href="blog-home-1.html">Blog Home 1</a></li>
-              <li><a href="blog-home-2.html">Blog Home 2</a></li>
-              <li><a href="blog-post.html">Blog Post</a></li>
-              <li class="disabled"><a href="#">Blog</a></li>
-              <li><a href="full-width.html">Full Width Page</a></li>
-              <li class="active"><a href="sidebar.html">Sidebar Page</a></li>
-              <li><a href="faq.html">FAQ</a></li>
-              <li><a href="404.html">404</a></li>
-              <li><a href="pricing.html">Pricing Table</a></li>
+                <li><a href="/calc/">Home &amp; Fishbones</a></li>
+                <li class="nav-divider"></li>
+                <li class="disabled"><a href="#">Renal</a></li>
+                <li><a href="#">Coming Soon</a></li>
+                <li><a href="#">Coming Soon</a></li>
+                <li><a href="#">Coming Soon</a></li>
+                <li class="disabled"><a href="#">Electrolytes</a></li>
+                <li><a href="#">Coming Soon</a></li>
+                <li><a href="#">Coming Soon</a></li>
+                <li><a href="#">Coming Soon</a></li>
             </ul>
         </div>
 
         <div class="col-md-9 col-sm-8">
-          <h1 class="page-header">{{ self.calc_title() }} <small>For Deeper Customization</small></h1>
-          <ol class="breadcrumb">
-            <li><a href="index.html">Home</a></li>
-            <li class="active">{{ self.calc_title() }}</li>
-          </ol>
-            {% block calc_content %} lol {% endblock %}
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc placerat diam quis nisl vestibulum dignissim. In hac habitasse platea dictumst. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Etiam placerat nunc ut tellus tristique, non posuere neque iaculis. Fusce aliquet dui ut felis rhoncus, vitae molestie mauris auctor. Donec pellentesque feugiat leo a adipiscing. Pellentesque quis tristique eros, sed rutrum mauris.</p>
+            <h1 class="page-header">{{ self.calc_title() }} <small>{{ self.calc_short_description() }}</small></h1>
+            <ol class="breadcrumb">
+                <li><a href="/calc/">Home</a></li>
+                <li class="active">{{ self.calc_title() }}</li>
+            </ol>
+            <div class="bs-callout bs-callout-warning">
+                <div class="alert alert-info"><strong>Coming Soon!</strong> We're putting the finishing touches on these calculators.</div>
+            </div>
+
+            {% block calc_content %}calc_content{% endblock %}
+
         </div>
 
-      </div><!-- /.row -->
+    </div><!-- /.row -->
 
-    </div>
+</div>
+
 {% endblock %}
