--- a/templates/calc/index.html
+++ b/templates/calc/index.html
@@ -3,5 +3,7 @@
 
 
 {% block calc_content %}
-calc_content lol
+
 {% endblock %}
+{% block calc_title %}Clinical Calculators{% endblock %}
+{% block calc_short_description %}From ClinDesk &amp; White Coat Academy{% endblock %}
