+sidebar sorta, fishbones area?

--- a/templates/calc/_calc_base.html
+++ b/templates/calc/_calc_base.html
@@ -18,6 +18,10 @@
                 <li><a href="#">Coming Soon</a></li>
                 <li><a href="#">Coming Soon</a></li>
                 <li><a href="#">Coming Soon</a></li>
+                <li class="disabled"><a href="#">Cardiac Risk</a></li>
+                <li><a href="#">Coming Soon</a></li>
+                <li><a href="#">Coming Soon</a></li>
+                <li><a href="#">Coming Soon</a></li>
             </ul>
         </div>
 
