--- a/templates/_base.html
+++ b/templates/_base.html
@@ -93,7 +93,7 @@
     <footer>
         <div class="row">
             <div class="col-lg-12">
-                <p>&copy; 2013 ClinDesk, Inc., some rights reserved</p>
+                <p>&copy; 2013—2014 ClinDesk, Inc., some rights reserved</p>
                 <p>Videos are licensed under a Creative Commons <a rel="license" href="//creativecommons.org/licenses/by-nc-sa/3.0/us/deed.en_US" target="_blank">CC BY NC SA 3.0</a> license.</p>
             </div>
         </div>
