--- a/templates/_base.html
+++ b/templates/_base.html
@@ -11,15 +11,15 @@
 
     {%- if config.apphost is defined -%}
     {# Building for production. Use the CDN minified versions. #}
-    <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css" rel="stylesheet">
+    <link href="//cdn.jsdelivr.net/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
     <link href="{{ static('css/cd-style.css') }}" rel="stylesheet">
-    <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet">
+    <link href="//cdn.jsdelivr.net/fontawesome/4.0.3/css/font-awesome.min.css" rel="stylesheet">
 
     <!-- Only serve analytics code if not running locally. -->
     {% include '_analytics_code.html' %}
     {% else %}
     {# Running locally. Use local versions (e.g. work on airplanes!) #}
-    <link href="{{ static('css/bootstrap-3.0.2.css') }}" rel="stylesheet">
+    <link href="{{ static('css/bootstrap-3.1.1.css') }}" rel="stylesheet">
     <link href="{{ static('css/cd-style.css') }}" rel="stylesheet">
     <link href="{{ static('css/font-awesome-4.0.3.css') }}" rel="stylesheet">
     {% endif %}
@@ -28,8 +28,8 @@
     <link href="//fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
 
     <!--[if lt IE 9]>
-    <script src="//oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.min.js"></script>
-    <script src="//oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
+    <script src="//cdn.jsdelivr.net/html5shiv/3.7.0/html5shiv.min.js"></script>
+    <script src="//cdn.jsdelivr.net/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 
     {# TODO: Add Apple Touch icons & massive favicons. #}
@@ -105,17 +105,17 @@
 
 {%- if config.apphost is defined -%}
 {# Building for production. Use the CDN minified versions. #}
-<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 <!-- This crazy code is failover if a CDN is blocked / fails. -->
-<script>window.jQuery || document.write('<script src="{{ static('js/jquery-1.10.2.js') }}">\x3C/script>')</script>
-<script type="text/javascript" src="//netdna.bootstrapcdn.com/bootstrap/3.0.2/js/bootstrap.min.js"></script>
+<script>window.jQuery || document.write('<script src="{{ static('js/jquery-1.11.0.js') }}">\x3C/script>')</script>
+<script type="text/javascript" src="//cdn.jsdelivr.net/bootstrap/3.1.1/js/bootstrap.min.js"></script>
 <!-- This crazy code is failover if a CDN is blocked / fails. -->
-<script>$('body').popover || document.write('<script src="{{ static('js/bootstrap-3.0.2.js') }}">\x3C/script>')</script>
+<script>$('body').popover || document.write('<script src="{{ static('js/bootstrap-3.1.1.js') }}">\x3C/script>')</script>
 <script src="{{ static('js/cd-scripts.js') }}"></script>
 {% else %}
 {# Running locally. Use local versions (e.g. work on airplanes!) #}
-<script src="{{ static('js/jquery-1.10.2.js') }}"></script>
-<script src="{{ static('js/bootstrap-3.0.2.js') }}"></script>
+<script src="{{ static('js/jquery-1.11.0.js') }}"></script>
+<script src="{{ static('js/bootstrap-3.1.1.js') }}"></script>
 <script src="{{ static('js/cd-scripts.js') }}"></script>
 {% endif %}
 
