--- a/templates/_base.html
+++ b/templates/_base.html
@@ -54,7 +54,7 @@
                 {# TODO: Cleaner implementation? #}
                 <li class="{{ home_active }}"><a href="/">Home</a></li>
                 <li class="{{ about_active }}"><a href="/about.html">About</a></li>
-                <li class="{{ hp_active }}"><a href="/history-physical-wizard/">H&amp;P Wizard</a></li>
+                <li class="{{ hnp_active }}"><a href="/history-physical-wizard/">H&amp;P Wizard</a></li>
                 <li class="{{ calc_active }}"><a href="/calc/">Medical Calculators</a></li>
             </ul>
         </div><!-- /.navbar-collapse -->
