--- a/templates/_base.html
+++ b/templates/_base.html
@@ -94,8 +94,8 @@
     <footer>
         <div class="row">
             <div class="col-lg-12">
-                <p>&copy; 2013—2014 ClinDesk, Inc., some rights reserved</p>
-                <p>Videos are licensed under a Creative Commons <a rel="license" href="//creativecommons.org/licenses/by-nc-sa/3.0/us/deed.en_US" target="_blank">CC BY NC SA 3.0</a> license.</p>
+                <p class="text-muted">&copy; 2013—2014 ClinDesk, Inc., some rights reserved</p>
+                <p class="text-muted">Videos are licensed under a Creative Commons <a rel="license" href="//creativecommons.org/licenses/by-nc-sa/3.0/us/deed.en_US" target="_blank">CC BY NC SA 3.0</a> license.</p>
             </div>
         </div>
     </footer>
