--- a/templates/_analytics_code.html
+++ b/templates/_analytics_code.html
@@ -12,6 +12,7 @@
     {% endif %}
 
     ga('require', 'linkid', 'linkid.js');
+    ga('require', 'displayfeatures');
     ga('send', 'pageview');
     window.onerror = function(m, u, l) { ga('send', 'event', 'JSError', m, u + ':' + l, null, {'nonInteraction': 1}); };
 </script>
