add new stemplates

--- a/templates/_base.html
+++ b/templates/_base.html
@@ -19,7 +19,7 @@
     {% include '_analytics_code.html' %}
     {% else %}
     {# Running locally. Use local versions (e.g. work on airplanes!) #}
-    <link href="{{ static('css/bootstrap-3.1.1.css') }}" rel="stylesheet">
+    <link href="{{ static('css/bootstrap/dist/css/bootstrap.css') }}" rel="stylesheet">
     <link href="{{ static('css/cd-style.css') }}" rel="stylesheet">
     <link href="{{ static('css/font-awesome-4.0.3.css') }}" rel="stylesheet">
     {% endif %}
