Rearrange active flag

--- a/templates/calc/_calc_base.html
+++ b/templates/calc/_calc_base.html
@@ -1,4 +1,5 @@
 {% extends "_base.html" %}
+{% set calc_active = 'active' %}
 
 {% block title %}{% block calc_title %}calc_title{% endblock %} — Medical Calculators{% endblock %}
 
