--- a/templates/_base.html
+++ b/templates/_base.html
@@ -19,9 +19,9 @@
     {% include '_analytics_code.html' %}
     {% else %}
     {# Running locally. Use local versions (e.g. work on airplanes!) #}
-    <link href="{{ static('css/bootstrap/dist/css/bootstrap.css') }}" rel="stylesheet">
+    <link href="{{ static('bower_components/bootstrap/dist/css/bootstrap.css') }}" rel="stylesheet">
     <link href="{{ static('css/cd-style.css') }}" rel="stylesheet">
-    <link href="{{ static('css/font-awesome-4.0.3.css') }}" rel="stylesheet">
+    <link href="{{ static('bower_components/font-awesome/css/font-awesome.css') }}" rel="stylesheet">
     {% endif %}
 
     {# Move this to local dependent code? #}
@@ -107,15 +107,15 @@
 {# Building for production. Use the CDN minified versions. #}
 <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 <!-- This crazy code is failover if a CDN is blocked / fails. -->
-<script>window.jQuery || document.write('<script src="{{ static('js/jquery-1.11.0.js') }}">\x3C/script>')</script>
+<script>window.jQuery || document.write('<script src="{{ static('bower_components/jquery/jquery.js') }}">\x3C/script>')</script>
 <script type="text/javascript" src="//cdn.jsdelivr.net/bootstrap/3.1.1/js/bootstrap.min.js"></script>
 <!-- This crazy code is failover if a CDN is blocked / fails. -->
-<script>$('body').popover || document.write('<script src="{{ static('js/bootstrap-3.1.1.js') }}">\x3C/script>')</script>
+<script>$('body').popover || document.write('<script src="{{ static('bower_components/bootstrap/dist/js/bootstrap.js') }}">\x3C/script>')</script>
 <script src="{{ static('js/cd-scripts.js') }}"></script>
 {% else %}
 {# Running locally. Use local versions (e.g. work on airplanes!) #}
-<script src="{{ static('js/jquery-1.11.0.js') }}"></script>
-<script src="{{ static('js/bootstrap-3.1.1.js') }}"></script>
+<script src="{{ static('bower_components/jquery/jquery.js') }}"></script>
+<script src="{{ static('bower_components/bootstrap/dist/js/bootstrap.js') }}"></script>
 <script src="{{ static('js/cd-scripts.js') }}"></script>
 {% endif %}
 
