--- a/templates/calc/_calc_base.html
+++ b/templates/calc/_calc_base.html
@@ -11,19 +11,32 @@
         {# Building for production. Use the CDN minified versions. #}
         <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular.min.js"></script>
         <!-- This crazy code is failover if a CDN is blocked / fails. -->
-        <script>window.jQuery || document.write('<script src="{{ static('js/angular/angular.js') }}">\x3C/script>')</script>
+        <script>window.jQuery || document.write('<script src="{{ static('bower_components/angular/angular.js') }}">\x3C/script>')</script>
+
         <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular-route.min.js"></script>
         <!-- This crazy code is failover if a CDN is blocked / fails. -->
-        <script>window.jQuery || document.write('<script src="{{ static('js/angular-route/angular-route.js') }}">\x3C/script>')</script>
+        <script>window.jQuery || document.write('<script src="{{ static('bower_components/angular-route/angular-route.js') }}">\x3C/script>')</script>
 
+        <script type = "text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.6.0/underscore-min.js"></script>
+        <!-- This crazy code is failover if a CDN is blocked / fails. -->
+        <script>window.jQuery || document.write('<script src="{{ static('bower_components/underscore/underscore.js') }}">\x3C/script>')</script>
+
+        <script type = "text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/d3/3.4.8/d3.min.js"></script>
+        <!-- This crazy code is failover if a CDN is blocked / fails. -->
+        <script>window.jQuery || document.write('<script src="{{ static('bower_components/d3/d3.min.js') }}">\x3C/script>')</script>
+
+
+        <script src="{{ static('bower_components/angular-charts/dist/angular-charts.min.js') }}"></script>
     {% else %}
         {# Running locally. Use local versions (e.g. work on airplanes!) #}
-        <script src="{{ static('js/angular/angular.js') }}"></script>
-        <script src="{{ static('js/angular-route/angular-route.js') }}"></script>
+        <script src="{{ static('bower_components/angular/angular.js') }}"></script>
+        <script src="{{ static('bower_components/angular-route/angular-route.js') }}"></script>
+        <script src="{{ static('bower_components/underscore/underscore.js') }}"></script>
+        <script src="{{ static('bower_components/d3/d3.js') }}"></script>
+        <script src="{{ static('bower_components/angular-charts/dist/angular-charts.js') }}"></script>
     {% endif %}
 
-    <script type = "text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.6.0/underscore-min.js"></script>
-    <script src="http://d3js.org/d3.v3.min.js"></script>
+
     <script src="{{ static('js/angular-app.js') }}"></script>
 
     <style>
