Uh ... lots of things moved. New generator.

--- a/app/template/pages/about.hbs
+++ b/app/template/pages/about.hbs
@@ -58,7 +58,7 @@
         </div>
 
         <div class="col-sm-3">
-            <img class="img-responsive img-thumbnail" src="{{ static('img/heads/semenko.jpg') }}">
+            <img class="img-responsive img-thumbnail" src="{{assets}}img/heads/semenko.jpg">
             <h3>Nick Semenkovich<br><small>Founder & President</small></h3>
             <p>Nick hails from M.I.T. with two degrees in "Course 6" (Electrical Engineering and Computer science) and Course 7 (Biology). He's currently an MD/PhD student in the lab of Dr. Jeffrey Gordon.</p>
             <ul class="list-unstyled list-inline list-social-icons">
@@ -70,7 +70,7 @@
         </div>
 
         <div class="col-sm-3">
-            <img class="img-responsive img-thumbnail" src="{{ static('img/heads/aaronm.jpg') }}">
+            <img class="img-responsive img-thumbnail" src="{{assets}}img/heads/aaronm.jpg">
             <h3>Aaron Mintz<br><small>Chief Operations Officer</small></h3>
             <p>Aaron spent his undergrad years at Stanford where he studied Symbolic Systems. He is currently a medicine resident. Aaron is also working on a health care startup.</p>
             <ul class="list-unstyled list-inline list-social-icons">
@@ -80,7 +80,7 @@
         </div>
 
         <div class="col-sm-3">
-            <img class="img-responsive img-thumbnail" src="{{ static('img/heads/leo.jpg') }}">
+            <img class="img-responsive img-thumbnail" src="{{assets}}img/heads/leo.jpg">
             <h3>Leo Shmuylovich<br><small>Chief Technology Officer</small></h3>
             <p>Leo is an MD/PhD student at Washington University, and recently sold his startup (Virtual Nerd) to Pearson Education. Leo completed his PhD in Dr. Sándor Kovác's laboratory.</p>
             <ul class="list-unstyled list-inline list-social-icons">
@@ -92,7 +92,7 @@
         </div>
 
         <div class="col-sm-3">
-            <img class="img-responsive img-thumbnail" src="{{ static('img/heads/dgermain.jpg') }}">
+            <img class="img-responsive img-thumbnail" src="{{assets}}'img/heads/dgermain.jpg">
             <h3>David Germain<br><small>CFO & Visionary</small></h3>
             <p>David spent his undergrad at Stanford and is currently an MD/PhD student in the lab of Dr. Tim Ley, focused on epigenetic regulatory mechanisms of AML.</p>
             <ul class="list-unstyled list-inline list-social-icons">
