--- a/app/template/layouts/default.hbs
+++ b/app/template/layouts/default.hbs
@@ -10,9 +10,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
 
     <!-- ADD ANALYTICS CODE: {% include '_analytics_code.html' -->
-    <link href="{{bower_assets}}/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
-    <link href="{{app_assets}}/css/cd-style.css" rel="stylesheet">
-    <link href="{{bower_assets}}/font-awesome/css/font-awesome.css" rel="stylesheet">
+
+    <!-- build:css styles/vendor.css -->
+    <!-- bower:css -->
+    <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.css">
+    <!-- endbower -->
+    <!-- endbuild -->
+    <!-- build:css(.tmp) styles/main.css -->
+    <link rel="stylesheet" href="styles/main.css">
+    <!-- endbuild -->
+
+    <link href="{{assets}}bower/font-awesome/css/font-awesome.css" rel="stylesheet">
 
     <link href="//fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
 
@@ -32,13 +40,13 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            {# TODO: Remove this style override. Boo. #}
+            {{! TODO: Remove this style override. Boo. }}
             <a class="navbar-brand" href="/" style="padding: 10px"><img src="{{app_assets}}/img/content/logo_sml.png" alt="ClinDesk, Inc."></a>
         </div>
 
         <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav navbar-right">
-                {# TODO: Cleaner implementation? #}
+                {{! TODO: Cleaner implementation? }}
                 <li class="{{ home_active }}"><a href="/">Home</a></li>
                 <li class="{{ about_active }}"><a href="/about.html">About</a></li>
                 <li class="{{ hnp_active }}"><a href="/history-physical-wizard/">H&amp;P Wizard</a></li>
@@ -62,7 +70,7 @@
 </div>
 {% endif %}
 
-{#
+{{!
 <header class="jumbotron {% block jumbotron_class %}subhead{% endblock %}" id="overview">
     <div class="container">
         <h1>{% block tagline_text %}tagline_text{% endblock %}</h1>
@@ -70,9 +78,9 @@
         {% block extra_jumbotron %}{% endblock %}
     </div>
 </header>
-#}
+}}
 
-{% block maincontent %}maincontent{% endblock %}
+{{> body }}
 
 
 <div class="container">
@@ -90,9 +98,9 @@
 </div><!-- /.container -->
 
 <!-- TODO: Re-add CDN failover, or get into bower somehow, etc. -->
-<script src="{{bower_assets}}/jquery/jquery.js') }}"></script>
-<script src="{{bower_assets}}/bootstrap/dist/js/bootstrap.js') }}"></script>
-<script src="{{app_assets}}/js/cd-scripts.js"></script>
+<script src="{{assets}}bower/jquery/jquery.js') }}"></script>
+<script src="{{assets}}bower/bootstrap/dist/js/bootstrap.js') }}"></script>
+<script src="{{assets}}js/cd-scripts.js"></script>
 
 
 </body>
