--- a/app/template/pages/index.hbs
+++ b/app/template/pages/index.hbs
@@ -1,3 +1,7 @@
+---
+title: WAT
+---
+LOLOLOL HERE
 {% extends "_base.html" %}
 {% set home_active = 'active' %}
 
@@ -67,7 +71,7 @@
                 <p style="line-height:0px">Founder</p>
             </div>
             <div class="col-lg-5 col-md-5 col-sm-5">
-                <img src="{{ static('img/logos/bottom-drop-banner.png') }}" height="120" width="600" alt="ClinDesk &amp; WhiteCoatAcademy" class="img-responsive img-thumbnail">
+                <img src="{{assets}}img/logos/bottom-drop-banner.png" height="120" width="600" alt="ClinDesk &amp; WhiteCoatAcademy" class="img-responsive img-thumbnail">
             </div>
 
         </div><!-- /.row -->
