Slightly more sane.

--- a/app/template/layouts/default.hbs
+++ b/app/template/layouts/default.hbs
@@ -17,7 +17,8 @@
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
-    <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/cd-style.css">
+    <link rel="stylesheet" href="styles/shared.css">
     <!-- endbuild -->
 
     <link href="{{assets}}bower/font-awesome/css/font-awesome.css" rel="stylesheet">
