--- a/app/template/layouts/default.hbs
+++ b/app/template/layouts/default.hbs
@@ -3,9 +3,9 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>{% block title %}{% endblock %} &mdash; ClinDesk, Inc.</title>
+    <title>{{title}}&mdash; ClinDesk, Inc.</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="{% block meta_description %}{% endblock %}" />
+    <meta name="description" content="{{meta_description}}" />
     <meta name="author" content="{% block meta_author %}Nick Semenkovich (@semenko), ClinDesk &amp; White Coat Academy{% endblock %}" />
     <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
 
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="styles/shared.css">
     <!-- endbuild -->
 
-    <link href="{{assets}}bower/font-awesome/css/font-awesome.css" rel="stylesheet">
+    <link href="{{assets}}/bower/font-awesome/css/font-awesome.css" rel="stylesheet">
 
     <link href="//fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
 
@@ -42,7 +42,7 @@
                 <span class="icon-bar"></span>
             </button>
             {{! TODO: Remove this style override. Boo. }}
-            <a class="navbar-brand" href="/" style="padding: 10px"><img src="{{app_assets}}/img/content/logo_sml.png" alt="ClinDesk, Inc."></a>
+            <a class="navbar-brand" href="/" style="padding: 10px"><img src="{{assets}}/img/content/logo_sml.png" alt="ClinDesk, Inc."></a>
         </div>
 
         <div class="collapse navbar-collapse navbar-ex1-collapse">
@@ -56,8 +56,7 @@
         </div><!-- /.navbar-collapse -->
     </div><!-- /.container -->
 </nav>
-
-{% if header_title and header_text %}
+{{omgwtf}}
 <div class="container">
     <div class="row">
         <div class="col-lg-12">
@@ -69,7 +68,7 @@
         </div>
     </div>
 </div>
-{% endif %}
+
 
 {{!
 <header class="jumbotron {% block jumbotron_class %}subhead{% endblock %}" id="overview">
@@ -98,10 +97,39 @@
 
 </div><!-- /.container -->
 
-<!-- TODO: Re-add CDN failover, or get into bower somehow, etc. -->
-<script src="{{assets}}bower/jquery/jquery.js') }}"></script>
-<script src="{{assets}}bower/bootstrap/dist/js/bootstrap.js') }}"></script>
-<script src="{{assets}}js/cd-scripts.js"></script>
+
+        <!-- build:js scripts/vendor.js -->
+        <!-- bower:js -->
+        <script src="../bower_components/jquery/jquery.js"></script>
+        <!-- endbower -->
+        <!-- endbuild -->
+
+        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
+        <script>
+            (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
+            function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
+            e=o.createElement(i);r=o.getElementsByTagName(i)[0];
+            e.src='//www.google-analytics.com/analytics.js';
+            r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
+            ga('create','UA-XXXXX-X');ga('send','pageview');
+        </script>
+
+        <!-- build:js scripts/plugins.js -->
+        <script src="../bower_components/bootstrap/js/affix.js"></script>
+        <script src="../bower_components/bootstrap/js/alert.js"></script>
+        <script src="../bower_components/bootstrap/js/dropdown.js"></script>
+        <script src="../bower_components/bootstrap/js/tooltip.js"></script>
+        <script src="../bower_components/bootstrap/js/modal.js"></script>
+        <script src="../bower_components/bootstrap/js/transition.js"></script>
+        <script src="../bower_components/bootstrap/js/button.js"></script>
+        <script src="../bower_components/bootstrap/js/popover.js"></script>
+        <script src="../bower_components/bootstrap/js/carousel.js"></script>
+        <script src="../bower_components/bootstrap/js/scrollspy.js"></script>
+        <script src="../bower_components/bootstrap/js/collapse.js"></script>
+        <script src="../bower_components/bootstrap/js/tab.js"></script>
+        <!-- endbuild -->
+
+<script src="../scripts/cd-scripts.js"></script>
 
 
 </body>
