Working about & index. Need subpages.

--- a/app/template/pages/index.hbs
+++ b/app/template/pages/index.hbs
@@ -1,18 +1,10 @@
 ---
-title: WAT
+home_active: active
+title: Welcome to ClinDesk
+tagline_text: Welcome to ClinDesk
+lead: Opening Medical Education
+
 ---
-LOLOLOL HERE
-{% extends "_base.html" %}
-{% set home_active = 'active' %}
-
-{% block title %}Welcome to ClinDesk{% endblock %}
-{# {% block jumbotron_class %}masthead{% endblock %} #}
-{% block tagline_text %}Welcome to ClinDesk{% endblock %}
-{% block lead %}Opening Medical Education{% endblock %}
-{% block extra_jumbotron %}{% endblock %}
-{% block maincontent %}
-
-
 
 <div class="section-colored text-center">
 
@@ -54,11 +46,11 @@ LOLOLOL HERE
                 <p>ClinDesk comprises a team of senior medical students and resident physicians who are passionate about opening the otherwise closed world of medical knowledge.</p>
                 <p>Soon, we'll be launching lots of Creative Commons-licensed medical resources, including:
                 <ul>
-                    <li>Free medical education videos, through our sister-site <a href="http://www.WhiteCoatAcademy.org/" target="_blank">White Coat Academy</a></li>
+                    <li>Free medical education videos, through our sister-site <a href="https://www.WhiteCoatAcademy.org/" target="_blank">White Coat Academy</a></li>
                     <li>Open USMLE prep materials, including a Goljan-esque Step I review series</li>
                     <li>An interactive physical exam tutorial featuring gunner-style facts (remember <a href="https://en.wikipedia.org/wiki/Duroziez%27s_sign" target="_blank">Duroziez's sign</a>?)</li>
                     <li>An H&amp;P/SOAP note wizard, with hints on important acronyms and diagnostics</li>
-                    <li>The <a href="http://www.vaccinatedoctors.org/">Vaccinate Doctors Initiative</a>, advocating for influenza vaccines</li>
+                    <li>The <a href="https://www.vaccinatedoctors.org/">Vaccinate Doctors Initiative</a>, advocating for influenza vaccines</li>
                 </ul>
                 <p>Hopefully we can change the face of medical education. If you're interested in helping out, please get in touch!</p><br>
             </div>
@@ -71,7 +63,7 @@ LOLOLOL HERE
                 <p style="line-height:0px">Founder</p>
             </div>
             <div class="col-lg-5 col-md-5 col-sm-5">
-                <img src="{{assets}}img/logos/bottom-drop-banner.png" height="120" width="600" alt="ClinDesk &amp; WhiteCoatAcademy" class="img-responsive img-thumbnail">
+                <img src="{{assets}}/img/logos/bottom-drop-banner.png" height="120" width="600" alt="ClinDesk &amp; WhiteCoatAcademy" class="img-responsive img-thumbnail">
             </div>
 
         </div><!-- /.row -->
@@ -79,6 +71,3 @@ LOLOLOL HERE
     </div><!-- /.container -->
 
 </div><!-- /.section -->
-
-
-{% endblock %}
