--- a/app/template/pages/search.hbs
+++ b/app/template/pages/search.hbs
@@ -1,8 +1,9 @@
-{% extends "_base.html" %}
-{% block title %}Search{% endblock %}
-{% block tagline_text %}Search{% endblock %}
-{% block lead %}{% endblock %}
-{% block maincontent %}
+---
+title: Search
+tagline_text: Search
+lead:
+---
+
 <!--main content-->
 <div class="container">
     <div class="row">
@@ -45,4 +46,3 @@
         </div>
     </div>
 </div>
-{% endblock %}
