--- a/app/template/layouts/default.hbs
+++ b/app/template/layouts/default.hbs
@@ -56,7 +56,8 @@
         </div><!-- /.navbar-collapse -->
     </div><!-- /.container -->
 </nav>
-{{omgwtf}}
+
+{{#if header_title}}
 <div class="container">
     <div class="row">
         <div class="col-lg-12">
@@ -68,7 +69,7 @@
         </div>
     </div>
 </div>
-
+{{/if}}
 
 {{!
 <header class="jumbotron {% block jumbotron_class %}subhead{% endblock %}" id="overview">
