--- a/app/template/layouts/default.hbs
+++ b/app/template/layouts/default.hbs
@@ -21,7 +21,9 @@
     <link rel="stylesheet" href="styles/shared.css">
     <!-- endbuild -->
 
-    <link href="{{assets}}/bower/font-awesome/css/font-awesome.css" rel="stylesheet">
+    <!-- ref:css //cdn.jsdelivr.net/fontawesome/4.0.3/css/font-awesome.min.css -->
+    <link rel="stylesheet" href="../bower_components/font-awesome/css/font-awesome.min.css">
+    <!-- endref -->
 
     <link href="//fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
 
