Cleanups & finally working?

--- a/app/template/layouts/default.hbs
+++ b/app/template/layouts/default.hbs
@@ -17,8 +17,8 @@
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
-    <link rel="stylesheet" href="styles/cd-style.css">
-    <link rel="stylesheet" href="styles/shared.css">
+    <link rel="stylesheet" href="../styles/cd-style.css">
+    <link rel="stylesheet" href="../styles/shared.css">
     <!-- endbuild -->
 
     <!-- ref:css //cdn.jsdelivr.net/fontawesome/4.0.3/css/font-awesome.min.css -->
@@ -73,18 +73,7 @@
 </div>
 {{/if}}
 
-{{!
-<header class="jumbotron {% block jumbotron_class %}subhead{% endblock %}" id="overview">
-    <div class="container">
-        <h1>{% block tagline_text %}tagline_text{% endblock %}</h1>
-        <p class="lead">{% block lead %}lead{% endblock %}</p>
-        {% block extra_jumbotron %}{% endblock %}
-    </div>
-</header>
-}}
-
 {{> body }}
-
 
 <div class="container">
     <hr>
